# skn25-fairdata-competition

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline_mermaid.txt  baseline_plus_mermaid.txt  codewrite.md  download_models.py  evaluate.py  export_onnx.py  main.py  metrics.json  pyproject.toml  requirements.submission.txt  requirements.txt  server.py
.codex/: 공정위AI공모전 모델제출 가이드.md
app/: __init__.py  corpus.py  generator.py  retriever.py  schemas.py
baseline_rag/: __init__.py  bge_m3.py  config.py  corpus.py  embeddings.py  experiments.py  keywords.py  retrieval_types.py  retrieval_utils.py  retriever.py  router.py  runtime.py  schemas.py
docs/: BGEM3_SETUP.md  PROJECT_SETUP.md  SUBMISSION_CHECKLIST.md  ny_2nd_RAG_실험설계_종합_패치노트.html  라우팅_LLM_태그_1차_구현보고서.md  라우팅_LLM_태그_실험계획.md  인공지능 모델 개발 기획서_꽃보다 의결.hwp
experiments/: benchmark_three_models.py  evaluate.py  sensitivity_config.yaml
from_uy/: eda.py  generate_qa_600_v3.py  qa_dataset_600_guideline.md
scripts/: _fetch_health.py  _healthcheck.py  _run_route_experiment.sh  _runtime.sh  build_indexes.py  build_route_tags.py  build_submission.sh  build_submission_hfbuild.sh  build_submission_kaniko_hfbuild.sh  download_bgem3_model.sh  download_model_matrix.sh  download_selected_models.py  evaluate_local.py  evaluate_retrieval_debug.py  exp_v2_e0.sh  exp_v2_e0_full_hybrid.sh  exp_v2_e1.sh  exp_v2_e2.sh  exp_v2_e2_bgem3_dense_sparse.sh  exp_v2_e2_bgem3_ds_d30_s50.sh.orig_for_a100_parallel  exp_v2_e3_dense_only_reranker.sh  exp_v2_e3_gte_dense_top75.sh  exp_v2_e4_e5_bm25.sh  exp_v2_e4_e5_bm25_route_tags.sh  (+19 more)
(+1068 files in other folders)
