[project]
name = "fairdata-rag"
version = "0.1.0"
description = "FairData competition RAG server"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "numpy>=1.26,<2.0",
    "scipy>=1.11,<1.14",
    "torch>=2.7",
    "transformers>=4.58",
    "sentence-transformers>=3.0,<4.0",
    "chromadb>=0.5,<0.6",
    "huggingface_hub>=0.24,<1.0",
    "hf_transfer>=0.1.8,<0.2",
    "bert-score>=0.3.13,<0.4",
    "rank-bm25>=0.2.2,<0.3",
]

[tool.uv]
package = false
